--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
             <version>1.50.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
